--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -185,15 +185,39 @@
             content:"데이터 제어하기 : ";
         }
         .ol5::before{
-            content:"데이터 연습하기 : ";
+            content:"데이터 내장 객체 : ";
         }
         .ol6::before{
-            content:"데이터 메서드 : ";
+            content:"데이터 공부하기 : ";
+        }
+        .page{
+            text-align: right;
+            top: 10px;
+            margin-bottom: 3px;
+            position: absolute;
+            right: 20px;
+            left: 15px;
+        }
+        .page li{
+            display: inline;
+            list-style: none;
+        }
+        .page li a{
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover{
+           color: #0f834b;
         }
     </style>
 </head>
 <body>
     <h1>Javascript 문법 정리</h1>
+    <ul class="page">
+        <li><a href="../refer-html/index.html">HTML</a></li>
+        <li><a href="../refer-css/index.html">CSS</a></li>
+        <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+    </ul>
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
@@ -214,44 +238,45 @@
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
     <ol class="ol5">
-        <li><a href="javascript400.html">알고리즘</a></li>
+        <li><a href="javascript602.html">문자열 객체</a></li>
+        <li><a href="javascript601.html">배열 객체</a></li>
+        <li><a href="javascript604.html">날짜 객체</a></li>
+        <li><a href="javascript608.html">수학 객체</a></li>
+        <li><a href="javascript607.html">숫자 객체</a></li>
+        <li><a href="javascript607.html">브라우저 객체</a></li>
+        <li><a href="javascript609.html">요소 객체</a></li>
+        <li><a href="javascript605.html">이벤트 객체</a></li>
     </ol>
     <ol class="ol6">
-        <li><a href="javascript601.html">배열 메서드</a></li>
-        <li><a href="javascript602.html">문자열 메서드</a></li>
-        <li><a href="javascript603.html">브라우저 메서드</a></li>
-        <li><a href="javascript604.html">날짜 메서드</a></li>
-        <li><a href="javascript605.html">이벤트 메서드</a></li>
-    </ol>
-    <ol class="ol7">
         <li><a href="javascript606.html">샘플</a></li>
+        <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
 
     <h2 class="mt20">데이터 저장하기</h2>
     <ul>
-        <li><a href="#sample1"></a>01. 변수 : 데이터 저장</a></li>
-        <li><a href="#sample2"></a>02. 변수 : 데이터 저장 + 데이터 변경</a></li>
-        <li><a href="#sample3"></a>03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
-        <li><a href="#sample4"></a>04. 상수 : 데이터 저장(변하지 않음)</a></li>
-        <li><a href="#sample5"></a>05. 배열 : 데이터 저장(여러개) : 표현 방법1</a></li>
-        <li><a href="#sample6"></a>06. 배열 : 데이터 저장(여러개) : 표현 방법2</a></li>
-        <li><a href="#sample7"></a>07. 배열 : 데이터 저장(여러개) : 표현 방법3</a></li>
-        <li><a href="#sample8"></a>08. 배열 : 데이터 저장(여러개) : 표현 방법4</a></li>
-        <li><a href="#sample9"></a>09. 객체 : 데이터 저장(키와 값) : 표현 방법1 : 배열 스타일</a></li>
-        <li><a href="#sample10"></a>10. 객체 : 데이터 저장(키와 값) : 표현 방법2 : 객체 스타일</a></li>
-        <li><a href="#sample11"></a>11. 객체 : 데이터 저장(키와 값) : 표현 방법3</a></li>
-        <li><a href="#sample12"></a>12. 객체 : 데이터 저장(키와 값) : 표현 방법4</a></li>
-        <li><a href="#sample13"></a>13. 객체 : 데이터 저장(키와 값) : 표현 방법5 : 배열 속의 객체</a></li>
-        <li><a href="#sample14"></a>14. 객체 : 데이터 저장(키와 값) : 표현 방법6 : 객체 속의 배열</a></li>
-        <li><a href="#sample15"></a>15. 객체 : 데이터 저장(키와 값) : 표현 방법7 : 객체 속의 변수</a></li>
-        <li><a href="#sample16"></a>16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속의 함수</a></li>
+        <li><a href="#sample1">01. 변수 : 데이터 저장</li>
+        <li><a href="#sample2">02. 변수 : 데이터 저장 + 데이터 변경</li>
+        <li><a href="#sample3">03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</li>
+        <li><a href="#sample4">04. 상수 : 데이터 저장(변하지 않음)</li>
+        <li><a href="#sample5">05. 배열 : 데이터 저장(여러개) : 표현 방법1</li>
+        <li><a href="#sample6">06. 배열 : 데이터 저장(여러개) : 표현 방법2</li>
+        <li><a href="#sample7">07. 배열 : 데이터 저장(여러개) : 표현 방법3</li>
+        <li><a href="#sample8">08. 배열 : 데이터 저장(여러개) : 표현 방법4</li>
+        <li><a href="#sample9">09. 객체 : 데이터 저장(키와 값) : 표현 방법1 : 배열 스타일</li>
+        <li><a href="#sample10">10. 객체 : 데이터 저장(키와 값) : 표현 방법2 : 객체 스타일</li>
+        <li><a href="#sample11">11. 객체 : 데이터 저장(키와 값) : 표현 방법3</li>
+        <li><a href="#sample12">12. 객체 : 데이터 저장(키와 값) : 표현 방법4</li>
+        <li><a href="#sample13">13. 객체 : 데이터 저장(키와 값) : 표현 방법5 : 배열 속의 객체</li>
+        <li><a href="#sample14">14. 객체 : 데이터 저장(키와 값) : 표현 방법6 : 객체 속의 배열</li>
+        <li><a href="#sample15">15. 객체 : 데이터 저장(키와 값) : 표현 방법7 : 객체 속의 변수</li>
+        <li><a href="#sample16">16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속의 함수</li>
     </ul>
 
     <h2 class="mt20">추가</h2>
     <ul>
-        <li><a href="#sample17"></a>01. 변수의 종류 : 변수(전역/지역), 매개변수</a></li>
-        <li><a href="#sample18"></a>02. 변수의 변환 : 형 변환</a></li>
-        <li><a href="#sample19"></a>03. 변수의 유형 : 데이터 타입</a></li>
+        <li><a href="#sample17">01. 변수의 종류 : 변수(전역/지역), 매개변수</li>
+        <li><a href="#sample18">02. 변수의 변환 : 형 변환</li>
+        <li><a href="#sample19">03. 변수의 유형 : 데이터 타입</li>
     </ul>
 
     <hr>
@@ -1032,6 +1057,5 @@
 
         }
     </script>
-    
 </body>
 </html>
