--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -185,15 +185,39 @@
             content:"데이터 제어하기 : ";
         }
         .ol5::before{
-            content:"데이터 연습하기 : ";
+            content:"데이터 내장 객체 : ";
         }
         .ol6::before{
-            content:"데이터 메서드 : ";
+            content:"데이터 공부하기 : ";
+        }
+        .page{
+            text-align: right;
+            top: 10px;
+            margin-bottom: 3px;
+            position: absolute;
+            right: 20px;
+            left: 15px;
+        }
+        .page li{
+            display: inline;
+            list-style: none;
+        }
+        .page li a{
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover{
+           color: #0f834b;
         }
     </style>
 </head>
 <body>
     <h1>Javascript 문법 정리</h1>
+    <ul class="page">
+        <li><a href="../refer-html/index.html">HTML</a></li>
+        <li><a href="../refer-css/index.html">CSS</a></li>
+        <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+    </ul>
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
@@ -214,41 +238,49 @@
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
     <ol class="ol5">
-        <li><a href="javascript400.html">알고리즘</a></li>
+        <li><a href="javascript602.html">문자열 객체</a></li>
+        <li><a href="javascript601.html">배열 객체</a></li>
+        <li><a href="javascript604.html">날짜 객체</a></li>
+        <li><a href="javascript608.html">수학 객체</a></li>
+        <li><a href="javascript607.html">숫자 객체</a></li>
+        <li><a href="javascript607.html">브라우저 객체</a></li>
+        <li><a href="javascript609.html">요소 객체</a></li>
+        <li><a href="javascript605.html">이벤트 객체</a></li>
     </ol>
     <ol class="ol6">
-        <li><a href="javascript601.html">배열 메서드</a></li>
-        <li><a href="javascript602.html">문자열 메서드</a></li>
-        <li><a href="javascript603.html">브라우저 메서드</a></li>
-        <li><a href="javascript604.html">날짜 메서드</a></li>
-        <li><a href="javascript605.html">이벤트 메서드</a></li>
-    </ol>
-    <ol class="ol7">
         <li><a href="javascript606.html">샘플</a></li>
+        <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
 
     <h2 class="mt20">데이터 실행 : 함수</h2>
     <ul>
-        <li a href=#smaple1>01. 선언적 함수</li>
-        <li a href=#smaple2>02. 익명 함수</li>
-        <li a href=#smaple3>03. 매개변수 함수</li>
-        <li a href=#smaple4>04. 리턴값 함수</li>
-        <li a href=#smaple4>04. 리턴값 함수</li>
-        <li a href=#smaple5>05. 화살표 함수 : 선언적 함수</li>
-        <li a href=#smaple6>06. 화살표 함수 : 익명 함수</li>
-        <li a href=#smaple7>07. 화살표 함수 : 리턴값 함수</li>
-        <li a href=#smaple8>08. 화살표 함수 : 익명함수 + 매개변수 + 리턴값</li>
-        <li a href=#smaple9>09. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 괄호 생략</li>
-        <li a href=#smaple10>10. 화살표 함수 : 익명함수+ 매개변수+ 리턴값 + 괄호 생략 +리턴값 생략</li>
-        <li a href=#smaple11>11. 화살표 함수 : 선언적 함수 + 매개변수 + 리턴값 + 괄호 생략 + 리턴 생략</li>
-        <li a href=#smaple12>12. 내부 함수</li>
-        <li a href=#smaple14>13. 즉시실행 함수</li>
-        <li a href=#smaple14>14. 파라미터 함수</li>
-        <li a href=#smaple15>15. 아규먼트 함수</li>
-        <li a href=#smaple16>16. 재귀 함수</li>
-        <li a href=#smaple17>17. 콜백 함수</li>
-        <li a href=#smaple17>18. 콜백 함수: 반복문</li>
+        <li><a href="#sample1">01. 선언적 함수</li>
+        <li><a href="#smaple2">02. 익명 함수</li>
+        <li><a href="#smaple3">03. 매개변수 함수</li>
+        <li><a href="#smaple4">04. 리턴값 함수</li>
+        <li><a href="#smaple4">04. 리턴값 함수</li>
+        <li><a href="#smaple5">05. 화살표 함수 : 선언적 함수</li>
+        <li><a href="#smaple6">06. 화살표 함수 : 익명 함수</li>
+        <li><a href="#smaple7">07. 화살표 함수 : 리턴값 함수</li>
+        <li><a href="#smaple8">08. 화살표 함수 : 익명함수 + 매개변수 + 리턴값</li>
+        <li><a href="#smaple9">09. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 괄호 생략</li>
+        <li><a href="#smaple10">10. 화살표 함수 : 익명함수+ 매개변수+ 리턴값 + 괄호 생략 +리턴값 생략</li>
+        <li><a href="#smaple11">11. 화살표 함수 : 선언적 함수 + 매개변수 + 리턴값 + 괄호 생략 + 리턴 생략</li>
+        <li><a href="#smaple12">12. 내부 함수</li>
+        <li><a href="#smaple13">13. 즉시실행 함수</li>
+        <li><a href="#smaple14">14. 파라미터 함수</li>
+        <li><a href="#smaple15">15. 아규먼트 함수</li>
+        <li><a href="#smaple16">16. 재귀 함수</li>
+        <li><a href="#smaple17">17. 콜백 함수</li>
 
+    </ul>
+
+    <h2 class="mt20">데이터 실행 : 메서드</h2>
+    <ul>
+        <li>01. setInterval()</li>
+        <li>02. serTimeout()</li>
+        <li>03.  clearInterval()</li>
+        <li>04.  clearTimeout()</li>
     </ul>
 
     <hr>
