--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -185,15 +185,39 @@
             content:"데이터 제어하기 : ";
         }
         .ol5::before{
-            content:"데이터 연습하기 : ";
+            content:"데이터 내장 객체 : ";
         }
         .ol6::before{
-            content:"데이터 메서드 : ";
+            content:"데이터 공부하기 : ";
+        }
+        .page{
+            text-align: right;
+            top: 10px;
+            margin-bottom: 3px;
+            position: absolute;
+            right: 20px;
+            left: 15px;
+        }
+        .page li{
+            display: inline;
+            list-style: none;
+        }
+        .page li a{
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover{
+           color: #0f834b;
         }
     </style>
 </head>
 <body>
     <h1>Javascript 문법 정리</h1>
+    <ul class="page">
+        <li><a href="../refer-html/index.html">HTML</a></li>
+        <li><a href="../refer-css/index.html">CSS</a></li>
+        <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+    </ul>
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
@@ -214,17 +238,18 @@
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
     <ol class="ol5">
-        <li><a href="javascript400.html">알고리즘</a></li>
+        <li><a href="javascript602.html">문자열 객체</a></li>
+        <li><a href="javascript601.html">배열 객체</a></li>
+        <li><a href="javascript604.html">날짜 객체</a></li>
+        <li><a href="javascript608.html">수학 객체</a></li>
+        <li><a href="javascript607.html">숫자 객체</a></li>
+        <li><a href="javascript607.html">브라우저 객체</a></li>
+        <li><a href="javascript609.html">요소 객체</a></li>
+        <li><a href="javascript605.html">이벤트 객체</a></li>
     </ol>
     <ol class="ol6">
-        <li><a href="javascript601.html">배열 메서드</a></li>
-        <li><a href="javascript602.html">문자열 메서드</a></li>
-        <li><a href="javascript603.html">브라우저 메서드</a></li>
-        <li><a href="javascript604.html">날짜 메서드</a></li>
-        <li><a href="javascript605.html">이벤트 메서드</a></li>
-    </ol>
-    <ol class="ol7">
         <li><a href="javascript606.html">샘플</a></li>
+        <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
 
     <h2 class="mt20">데이터 불러오기</h2>
@@ -263,7 +288,7 @@
 
     //let x =100;
     //let x =200;
-    //let x =javascript;
+    //let x ="javascript";
 
     let x = 100, y = 200; z = "javascript";
 
@@ -316,7 +341,7 @@
     <div id="sample4" class="sample">
         <h2>04. 배열 : 데이터 불러오기 : 2차 배열 <span class="dot"></span></h2>
         <div class="code">
-<pre class="line-numbers"><code class="language-js">{\
+<pre class="line-numbers"><code class="language-js">{
     document.write("***04. 배열 : 데이터 불러오기 : 2차 배열***<br>");
 
     const arr =[100, 200,["javascript", "jquery"]];
@@ -802,7 +827,7 @@
             
             //let x =100;
             //let x =200;
-            //let x =javascript;
+            //let x ="javascript";
 
             let x = 100, y = 200; z = "javascript";
 
@@ -824,7 +849,7 @@
         //sample3
         //03. 배열 : 데이터 불러오기
         {
-            document.write("***02. 배열 : 데이터 불러오기***<br>");
+            document.write("***03. 배열 : 데이터 불러오기***<br>");
 
             const arr = [100, 200, "javascript"]
 
@@ -835,7 +860,7 @@
         //sample4
         //04. 배열 : 데이터 불러오기 : 2차 배열
         {
-            document.write("***03. 배열 : 데이터 불러오기 : 2차 배열***<br>");
+            document.write("***04. 배열 : 데이터 불러오기 : 2차 배열***<br>");
 
             const arr =[100, 200,["javascript", "jquery"]];
 
@@ -848,7 +873,7 @@
         //sample5
         //05. 배열 : 데이터 불러오기 : 갯수 구하기
         {
-            document.write("***04. 배열 : 데이터 불러오기 : 갯수 구하기***<br>");
+            document.write("***05. 배열 : 데이터 불러오기 : 갯수 구하기***<br>");
 
             const arr = [100, 200, "javascript"];
             document.write(arr.length, "<br><br>")
@@ -856,7 +881,7 @@
         //sample6
         //06. 배열 : 데이터 불러오기 : for문
         {
-            document.write("***05. 배열 : 데이터 불러오기 : for문***<br>");
+            document.write("***06. 배열 : 데이터 불러오기 : for문***<br>");
 
             const arr = [100, 200, 300, 400, 500];
 
@@ -866,19 +891,19 @@
         }
         //7월 26일 숙제
         //배열 데이터의 합을 출력하세요!!
-        {
-            const arr =[100, 200, 300, 400, 500];
+        // {
+        //     const arr =[100, 200, 300, 400, 500];
 
-            document.write("***배열 : 데이터의 합***<br>");    
+        //     document.write("***배열 : 데이터의 합***<br>");    
 
-            let sum = 0;
+        //     let sum = 0;
 
-            for(let i=0; i<5; i++) {
-            sum += arr[i];
-            }
-            document.write(sum);
-            document.write("<br><br>");
-        }
+        //     for(let i=0; i<5; i++) {
+        //     sum += arr[i];
+        //     }
+        //     document.write(sum);
+        //     document.write("<br><br>");
+        // }
         //sample7
         //07. 배열 : 데이터 불러오기 : forEach()
         {
