--- a/javascript/javascriptsample01.html
+++ b/javascript/javascriptsample01.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML 속성 검색하기</title>
+    <title>CSS 속성 검색하기</title>
     <style>
         @font-face {
             font-family: 'GyeonggiBatang';
@@ -374,6 +374,5 @@
            })
         });
     </script>
-    
 </body>
 </html>
